--- a/final_project/NAVBAR BOILERPLATE.html
+++ b/final_project/NAVBAR BOILERPLATE.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./U.png"></a>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="display: flex; justify-content: space-evenly;">
-            <div class="navbar-nav" style="width: 30%; display: flex; justify-content: space-between;">
+            <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#"><img src="./teenyicons_home-solid.png"></a>
               <a class="nav-link" href="#"><img src="./streamline_store-1-solid.png"></a>
               <a class="nav-link" href="#"><img src="./icon-park-outline_add.png"></a>
