--- a/final_project/unimart boilerplate navbar.html
+++ b/final_project/unimart boilerplate navbar.html
@@ -10,17 +10,17 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #425172 !important;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./U.png"></a>
+          <a class="navbar-brand" href="#"><img src="./resources/U.png"></a>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="display: flex; justify-content: space-evenly;">
             <div class="navbar-nav" style="width: 30%; display: flex; justify-content: space-between;">
-              <a class="nav-link active" aria-current="page" href="#"><img src="./teenyicons_home-solid.png"></a>
-              <a class="nav-link" href="#"><img src="./streamline_store-1-solid.png"></a>
-              <a class="nav-link" href="#"><img src="./icon-park-outline_add.png"></a>
+              <a class="nav-link active" aria-current="page" href="#"><img src="./resources/teenyicons_home-solid.png"></a>
+              <a class="nav-link" href="#"><img src="./resources/streamline_store-1-solid.png"></a>
+              <a class="nav-link" href="#"><img src="./resources/icon-park-outline_add.png"></a>
             </div>
           </div>
-          <a class="navbar-right" href="#"><img src="./majesticons_chat.png"></a>
-          <a class="navbar-right" href="#"><img src="./mage_notification-bell-fill.png"></a>
-          <a class="navbar-right" href="#"><img src="./healthicons_ui-user-profile-outline.png"></a>
+          <a class="navbar-right" href="#"><img src="./resources/majesticons_chat.png"></a>
+          <a class="navbar-right" href="#"><img src="./resources/mage_notification-bell-fill.png"></a>
+          <a class="navbar-right" href="#"><img src="./resources/healthicons_ui-user-profile-outline.png"></a>
         </div>
     </nav>
 
